--- a/ThiTracNghiem/ThiTracNghiem.csproj
+++ b/ThiTracNghiem/ThiTracNghiem.csproj
@@ -72,11 +72,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuanLyThi.cs">
+    <Compile Include="SuaXoaDeThi.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="QuanLyThi.Designer.cs">
-      <DependentUpon>QuanLyThi.cs</DependentUpon>
+    <Compile Include="SuaXoaDeThi.Designer.cs">
+      <DependentUpon>SuaXoaDeThi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TaoDeThi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TaoDeThi.Designer.cs">
+      <DependentUpon>TaoDeThi.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="BatDauThi.resx">
       <DependentUpon>BatDauThi.cs</DependentUpon>
@@ -99,8 +105,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="QuanLyThi.resx">
-      <DependentUpon>QuanLyThi.cs</DependentUpon>
+    <EmbeddedResource Include="SuaXoaDeThi.resx">
+      <DependentUpon>SuaXoaDeThi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TaoDeThi.resx">
+      <DependentUpon>TaoDeThi.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
